--- a/index.css
+++ b/index.css
@@ -21,35 +21,7 @@
   --animation-custom_in-scale: 0.3;
   font-size: 6rem;
   font-weight: 700;
-  margin: -441px 42px 0;
-}
-
-.u-section-1 .u-group-1 {
-  width: 626px;
-  min-height: 77px;
-  box-shadow: 5px 5px 20px 0 rgba(163,85,89,0.4);
-  background-image: none;
-  --animation-custom_in-translate_x: 0px;
-  --animation-custom_in-translate_y: 0px;
-  --animation-custom_in-opacity: 0;
-  --animation-custom_in-rotate: 0deg;
-  --animation-custom_in-scale: 0.001;
-  height: auto;
-  margin: 153px auto 60px;
-}
-
-.u-section-1 .u-container-layout-1 {
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
-.u-section-1 .u-text-2 {
-  margin: 0;
-}
-
-.u-section-1 .u-btn-1 {
-  margin-top: 2px;
-  padding: 0;
+  margin: -441px 42px 60px;
 }
 
 @media (max-width: 1199px) {
@@ -67,10 +39,6 @@
   .u-section-1 .u-text-1 {
     margin-left: 0;
     margin-right: 0;
-  }
-
-  .u-section-1 .u-group-1 {
-    height: auto;
   }
 }
 
@@ -92,10 +60,6 @@
   .u-section-1 .u-text-1 {
     font-size: 3.4375rem;
   }
-
-  .u-section-1 .u-group-1 {
-    width: 540px;
-  }
 }
 
 @media (max-width: 575px) {
@@ -105,10 +69,6 @@
 
   .u-section-1 .u-text-1 {
     font-size: 2.25rem;
-  }
-
-  .u-section-1 .u-group-1 {
-    width: 340px;
   }
 } .u-section-2 {
   background-image: none;
@@ -717,8 +677,8 @@
 }
 
 .u-section-4 .u-layout-wrap-1 {
-  margin-top: 60px;
-  margin-bottom: 0;
+  margin-top: 61px;
+  margin-bottom: 60px;
 }
 
 .u-section-4 .u-layout-cell-1 {
@@ -751,28 +711,19 @@
 }
 
 .u-section-4 .u-container-layout-2 {
-  padding: 30px 10px;
-}
-
-.u-section-4 .u-btn-1 {
-  text-transform: uppercase;
-  background-image: none;
-  font-weight: 700;
-  letter-spacing: 1px;
-  font-size: 1.5rem;
-  margin: 0 auto;
-  padding: 13px 35px 14px;
+  padding: 30px 0;
 }
 
 .u-section-4 .u-custom-html-1 {
   height: auto;
   min-height: 32px;
-  margin: 31px 10px 59px -10px;
+  width: 1123px;
+  margin: 0 -400px;
 }
 
 @media (max-width: 1199px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 501px;
+    min-height: 453px;
   }
 
   .u-section-4 .u-layout-cell-1 {
@@ -801,14 +752,15 @@
   }
 
   .u-section-4 .u-custom-html-1 {
-    margin-right: 0;
+    width: 266px;
     margin-left: 0;
+    margin-right: 0;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 382px;
+    min-height: 282px;
   }
 
   .u-section-4 .u-layout-cell-1 {
@@ -827,9 +779,17 @@
   .u-section-4 .u-layout-cell-2 {
     min-height: 100px;
   }
+
+  .u-section-4 .u-custom-html-1 {
+    width: 204px;
+  }
 }
 
 @media (max-width: 767px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 382px;
+  }
+
   .u-section-4 .u-container-layout-1 {
     padding-left: 20px;
     padding-right: 20px;
@@ -893,6 +853,8 @@
 
 .u-section-5 .u-layout-cell-2 {
   min-height: 438px;
+  transition-duration: 2s;
+  background-image: none;
 }
 
 .u-section-5 .u-container-layout-2 {
@@ -1374,259 +1336,10 @@
     font-size: 3.75rem;
   }
 }.u-section-7 .u-sheet-1 {
-  min-height: 740px;
-}
-
-.u-section-7 .u-layout-wrap-1 {
-  margin: 70px 0;
-}
-
-.u-section-7 .u-layout-cell-1 {
-  min-height: 718px;
-}
-
-.u-section-7 .u-container-layout-1 {
-  padding: 0 32px 30px 60px;
-}
-
-.u-section-7 .u-image-1 {
-  height: 358px;
-  margin-top: 0;
-  margin-bottom: 0;
-  --animation-custom_in-translate_x: -300px;
-  --animation-custom_in-translate_y: 0px;
-  --animation-custom_in-opacity: 0;
-  --animation-custom_in-rotate: 0deg;
-  --animation-custom_in-scale: 1;
-}
-
-.u-section-7 .u-text-1 {
-  font-size: 2.25rem;
-  --animation-custom_in-translate_x: -300px;
-  --animation-custom_in-translate_y: 0px;
-  --animation-custom_in-opacity: 0;
-  --animation-custom_in-rotate: 0deg;
-  --animation-custom_in-scale: 1;
-  margin: 38px auto 0 0;
-}
-
-.u-section-7 .u-text-2 {
-  --animation-custom_in-translate_x: -300px;
-  --animation-custom_in-translate_y: 0px;
-  --animation-custom_in-opacity: 0;
-  --animation-custom_in-rotate: 0deg;
-  --animation-custom_in-scale: 1;
-  margin: 20px 40px 0 0;
-}
-
-.u-section-7 .u-text-3 {
-  margin-left: 0;
-  margin-right: 40px;
-  margin-bottom: 0;
-  --animation-custom_in-translate_x: -300px;
-  --animation-custom_in-translate_y: 0px;
-  --animation-custom_in-opacity: 0;
-  --animation-custom_in-rotate: 0deg;
-  --animation-custom_in-scale: 1;
-}
-
-.u-section-7 .u-btn-1 {
-  background-image: none;
-  border-style: solid;
-  padding: 0;
-}
-
-.u-section-7 .u-layout-cell-2 {
-  min-height: 343px;
-  background-image: none;
-  --animation-custom_in-translate_x: 300px;
-  --animation-custom_in-translate_y: 0px;
-  --animation-custom_in-opacity: 0;
-  --animation-custom_in-rotate: 0deg;
-  --animation-custom_in-scale: 1;
-}
-
-.u-section-7 .u-container-layout-2 {
-  padding: 30px 60px;
-}
-
-.u-section-7 .u-icon-1 {
-  width: 64px;
-  margin: 0 auto 0 0;
-}
-
-.u-section-7 .u-text-4 {
-  line-height: 1.8;
-  font-weight: 400;
-  font-size: 1.25rem;
-  text-transform: none;
-  margin: 20px auto 0 0;
-}
-
-.u-section-7 .u-layout-cell-3 {
-  min-height: 343px;
-}
-
-.u-section-7 .u-container-layout-3 {
-  padding: 30px 60px;
-}
-
-.u-section-7 .u-text-5 {
-  --animation-custom_in-translate_x: 300px;
-  --animation-custom_in-translate_y: 0px;
-  --animation-custom_in-opacity: 0;
-  --animation-custom_in-rotate: 0deg;
-  --animation-custom_in-scale: 0.3;
-  margin: 8px auto 0 0;
-}
-
-.u-section-7 .u-text-6 {
-  --animation-custom_in-translate_x: 300px;
-  --animation-custom_in-translate_y: 0px;
-  --animation-custom_in-opacity: 0;
-  --animation-custom_in-rotate: 0deg;
-  --animation-custom_in-scale: 1;
-  margin: 20px 0 0;
-}
-
-.u-section-7 .u-btn-2 {
-  letter-spacing: 1px;
-  font-size: 1rem;
-  border-style: none;
-  font-weight: 700;
-  text-transform: uppercase;
-  background-image: none;
-  --animation-custom_in-translate_x: 0px;
-  --animation-custom_in-translate_y: 300px;
-  --animation-custom_in-opacity: 0;
-  --animation-custom_in-rotate: 0deg;
-  --animation-custom_in-scale: 1;
-  margin: 20px auto 0 0;
-  padding: 15px 41px 16px 40px;
-}
-
-@media (max-width: 1199px) {
-  .u-section-7 .u-sheet-1 {
-    min-height: 614px;
-  }
-
-  .u-section-7 .u-layout-wrap-1 {
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-7 .u-layout-cell-1 {
-    min-height: 592px;
-  }
-
-  .u-section-7 .u-container-layout-1 {
-    padding-left: 30px;
-    padding-right: 30px;
-  }
-
-  .u-section-7 .u-image-1 {
-    height: 283px;
-  }
-
-  .u-section-7 .u-text-2 {
-    margin-right: 0;
-  }
-
-  .u-section-7 .u-text-3 {
-    margin-right: 0;
-  }
-
-  .u-section-7 .u-layout-cell-2 {
-    min-height: 283px;
-  }
-
-  .u-section-7 .u-container-layout-2 {
-    padding-left: 30px;
-    padding-right: 30px;
-  }
-
-  .u-section-7 .u-text-4 {
-    font-size: 1.125rem;
-  }
-
-  .u-section-7 .u-layout-cell-3 {
-    min-height: 283px;
-  }
-
-  .u-section-7 .u-container-layout-3 {
-    padding-left: 30px;
-    padding-right: 30px;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-7 .u-sheet-1 {
-    min-height: 222px;
-  }
-
-  .u-section-7 .u-layout-cell-1 {
-    min-height: 804px;
-  }
-
-  .u-section-7 .u-image-1 {
-    height: 503px;
-  }
-
-  .u-section-7 .u-layout-cell-2 {
-    min-height: 100px;
-  }
-
-  .u-section-7 .u-layout-cell-3 {
-    min-height: 100px;
-  }
-}
-
-@media (max-width: 767px) {
-  .u-section-7 .u-sheet-1 {
-    min-height: 322px;
-  }
-
-  .u-section-7 .u-layout-cell-1 {
-    min-height: 732px;
-  }
-
-  .u-section-7 .u-container-layout-1 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-7 .u-image-1 {
-    height: 431px;
-  }
-
-  .u-section-7 .u-container-layout-2 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-7 .u-container-layout-3 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-7 .u-layout-cell-1 {
-    min-height: 100px;
-  }
-
-  .u-section-7 .u-image-1 {
-    height: 265px;
-  }
-
-  .u-section-7 .u-text-1 {
-    font-size: 1.5rem;
-  }
-}.u-section-8 .u-sheet-1 {
   min-height: 819px;
 }
 
-.u-section-8 .u-shape-1 {
+.u-section-7 .u-shape-1 {
   width: 461px;
   height: 658px;
   background-image: none;
@@ -1638,7 +1351,7 @@
   margin: 80px auto 0;
 }
 
-.u-section-8 .u-image-1 {
+.u-section-7 .u-image-1 {
   width: 665px;
   height: 527px;
   --animation-custom_in-translate_x: 0px;
@@ -1649,7 +1362,7 @@
   margin: -592px 0 0 auto;
 }
 
-.u-section-8 .u-group-1 {
+.u-section-7 .u-group-1 {
   width: 583px;
   min-height: 532px;
   height: auto;
@@ -1661,104 +1374,88 @@
   margin: -530px auto 60px 0;
 }
 
-.u-section-8 .u-container-layout-1 {
-  padding: 30px 20px;
+.u-section-7 .u-container-layout-1 {
+  padding: 30px 13px;
 }
 
-.u-section-8 .u-text-1 {
+.u-section-7 .u-text-1 {
   font-size: 3rem;
-  margin: 0;
+  margin: 95px 7px 0;
 }
 
-.u-section-8 .u-text-2 {
-  font-size: 1.25rem;
-  margin: 45px 131px 0 0;
+.u-section-7 .u-text-2 {
+  font-size: 1.5rem;
+  margin: 16px auto 0 7px;
 }
 
-.u-section-8 .u-text-3 {
-  margin: 20px auto 0 0;
-}
-
-.u-section-8 .u-btn-1 {
-  background-image: none;
-  border-style: solid;
-  padding: 0;
-}
-
-.u-section-8 .u-btn-2 {
+.u-section-7 .u-btn-1 {
   letter-spacing: 1px;
   font-size: 1rem;
   border-style: none;
   font-weight: 700;
   text-transform: uppercase;
   background-image: none;
-  margin: 30px auto 0 0;
+  margin: 16px auto 0 7px;
   padding: 15px 41px 16px 40px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-8 .u-image-1 {
+  .u-section-7 .u-image-1 {
     width: 583px;
   }
 
-  .u-section-8 .u-group-1 {
+  .u-section-7 .u-group-1 {
     width: 521px;
-    min-height: 557px;
     height: auto;
   }
 
-  .u-section-8 .u-text-1 {
+  .u-section-7 .u-text-1 {
     font-size: 2.75rem;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-8 .u-sheet-1 {
+  .u-section-7 .u-sheet-1 {
     min-height: 1353px;
   }
 
-  .u-section-8 .u-shape-1 {
+  .u-section-7 .u-shape-1 {
     width: 399px;
     height: 632px;
     margin-top: 654px;
     margin-left: 0;
   }
 
-  .u-section-8 .u-image-1 {
+  .u-section-7 .u-image-1 {
     margin-top: -579px;
   }
 
-  .u-section-8 .u-group-1 {
+  .u-section-7 .u-group-1 {
     margin-top: -1166px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
   }
-
-  .u-section-8 .u-text-2 {
-    margin-right: 330px;
-  }
 }
 
 @media (max-width: 767px) {
-  .u-section-8 .u-sheet-1 {
+  .u-section-7 .u-sheet-1 {
     min-height: 1201px;
   }
 
-  .u-section-8 .u-shape-1 {
+  .u-section-7 .u-shape-1 {
     width: 386px;
     height: 565px;
     margin-top: 55px;
   }
 
-  .u-section-8 .u-image-1 {
+  .u-section-7 .u-image-1 {
     width: 540px;
     height: 488px;
     margin-top: -527px;
   }
 
-  .u-section-8 .u-group-1 {
-    min-height: 504px;
+  .u-section-7 .u-group-1 {
     margin-top: -1053px;
     margin-bottom: 116px;
     width: auto;
@@ -1766,34 +1463,39 @@
     margin-left: initial;
   }
 
-  .u-section-8 .u-container-layout-1 {
+  .u-section-7 .u-container-layout-1 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-8 .u-text-2 {
-    margin-right: 150px;
+  .u-section-7 .u-text-1 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-7 .u-text-2 {
+    margin-left: 0;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-8 .u-sheet-1 {
+  .u-section-7 .u-sheet-1 {
     min-height: 975px;
   }
 
-  .u-section-8 .u-shape-1 {
+  .u-section-7 .u-shape-1 {
     width: 227px;
     height: 338px;
     margin-top: 437px;
   }
 
-  .u-section-8 .u-image-1 {
+  .u-section-7 .u-image-1 {
     width: 310px;
     height: 325px;
     margin-top: -332px;
   }
 
-  .u-section-8 .u-group-1 {
+  .u-section-7 .u-group-1 {
     margin-top: -859px;
     margin-bottom: 258px;
     width: auto;
@@ -1801,360 +1503,87 @@
     margin-left: initial;
   }
 
-  .u-section-8 .u-text-1 {
+  .u-section-7 .u-text-1 {
     font-size: 2.25rem;
   }
-
-  .u-section-8 .u-text-2 {
-    margin-right: 0;
-  }
-} .u-section-9 {
+} .u-section-8 {
   background-image: none;
   min-height: 1198px;
 }
 
-.u-section-9 .u-image-1 {
+.u-section-8 .u-image-1 {
   height: 516px;
   margin-top: 0;
   margin-bottom: 0;
 }
 
-.u-section-9 .u-layout-wrap-1 {
-  width: 1192px;
-  margin: -78px auto 60px;
-}
-
-.u-section-9 .u-layout-cell-1 {
-  min-height: 706px;
-  --animation-custom_in-translate_x: -300px;
-  --animation-custom_in-translate_y: 0px;
-  --animation-custom_in-opacity: 0;
-  --animation-custom_in-rotate: 0deg;
-  --animation-custom_in-scale: 1;
-}
-
-.u-section-9 .u-container-layout-1 {
-  padding: 40px;
-}
-
-.u-section-9 .u-text-1 {
-  margin: 0;
-}
-
-.u-section-9 .u-text-2 {
-  font-size: 1.125rem;
-  margin: 40px 0 0;
-}
-
-.u-section-9 .u-line-1 {
-  width: 437px;
-  transform-origin: left center;
-  margin: 23px auto 0 0;
-}
-
-.u-section-9 .u-list-1 {
-  margin-top: 23px;
-  margin-bottom: 0;
-}
-
-.u-section-9 .u-repeater-1 {
-  grid-template-columns: repeat(1, 100%);
-  min-height: 214px;
-  grid-gap: 0px;
-}
-
-.u-section-9 .u-container-layout-2 {
-  padding: 10px 10px 10px 0;
-}
-
-.u-section-9 .u-icon-1 {
-  width: 33px;
-  height: 33px;
-  --animation-custom_in-translate_x: 50px;
-  --animation-custom_in-translate_y: 0px;
-  --animation-custom_in-opacity: 0;
-  --animation-custom_in-rotate: 180deg;
-  --animation-custom_in-scale: 0.3;
-  margin: 0 auto 0 0;
-  padding: 0;
-}
-
-.u-section-9 .u-text-3 {
-  font-weight: 700;
-  margin: -33px 0 0 60px;
-}
-
-.u-section-9 .u-text-4 {
-  font-style: italic;
-  margin: 11px 0 0 60px;
-}
-
-.u-section-9 .u-container-layout-3 {
-  padding: 10px 10px 10px 0;
-}
-
-.u-section-9 .u-icon-2 {
-  width: 33px;
-  height: 33px;
-  --animation-custom_in-translate_x: 50px;
-  --animation-custom_in-translate_y: 0px;
-  --animation-custom_in-opacity: 0;
-  --animation-custom_in-rotate: 180deg;
-  --animation-custom_in-scale: 0.3;
-  margin: 0 auto 0 0;
-  padding: 0;
-}
-
-.u-section-9 .u-text-5 {
-  font-weight: 700;
-  margin: -33px 0 0 60px;
-}
-
-.u-section-9 .u-text-6 {
-  font-style: italic;
-  margin: 11px 0 0 60px;
-}
-
-.u-section-9 .u-layout-cell-2 {
-  min-height: 706px;
-  --animation-custom_in-scale: 1;
-  --animation-custom_in-translate_x: 300px;
-  --animation-custom_in-translate_y: 0px;
-}
-
-.u-section-9 .u-container-layout-4 {
-  padding: 40px;
-}
-
-.u-section-9 .u-text-7 {
-  margin: 0;
-}
-
-.u-section-9 .u-form-1 {
-  height: 472px;
-  width: 522px;
-  margin: 23px auto 0;
-}
-
-.u-section-9 .u-form-group-4 {
-  margin-left: 0;
-}
-
-.u-section-9 .u-btn-1 {
-  border-style: solid;
-  letter-spacing: 0px;
-  background-image: none;
-  font-size: 1.25rem;
-  font-weight: 400;
-  text-transform: none;
-  padding-left: 0;
-  padding-right: 0;
-}
-
-.u-section-9 .u-text-8 {
-  margin: 30px 39px 0;
-}
-
-.u-section-9 .u-btn-2 {
-  background-image: none;
-  border-style: solid;
-  padding: 0;
+.u-section-8 .u-image-2 {
+  width: 652px;
+  height: 652px;
+  animation-timing-function: ease-in-out;
+  transition-duration: 3s;
+  transform: rotate(0deg) scale(1) translateX(0px) translateY(0px);
+  margin: 17px auto 13px calc(((100% - 1140px) / 2)  + 215px);
 }
 
 @media (max-width: 1199px) {
-   .u-section-9 {
-    min-height: 1052px;
-  }
-
-  .u-section-9 .u-layout-wrap-1 {
-    width: 940px;
-    margin-right: calc(((100% - 940px) / 2));
-  }
-
-  .u-section-9 .u-layout-cell-1 {
-    min-height: 557px;
-  }
-
-  .u-section-9 .u-line-1 {
-    width: 390px;
-  }
-
-  .u-section-9 .u-repeater-1 {
-    grid-template-columns: 100%;
-  }
-
-  .u-section-9 .u-text-3 {
-    width: auto;
-  }
-
-  .u-section-9 .u-text-4 {
-    width: auto;
-    margin-top: 8px;
-  }
-
-  .u-section-9 .u-text-5 {
-    width: auto;
-  }
-
-  .u-section-9 .u-text-6 {
-    width: auto;
-    margin-top: 8px;
-  }
-
-  .u-section-9 .u-layout-cell-2 {
-    min-height: 557px;
-  }
-
-  .u-section-9 .u-form-1 {
-    width: 390px;
-  }
-
-  .u-section-9 .u-btn-1 {
-    width: 100%;
-  }
-
-  .u-section-9 .u-text-8 {
-    margin-left: 0;
-    margin-right: 0;
+  .u-section-8 .u-image-2 {
+    margin-left: calc(((100% - 940px) / 2) + 215px);
   }
 }
 
 @media (max-width: 991px) {
-   .u-section-9 {
-    min-height: 1082px;
-  }
-
-  .u-section-9 .u-image-1 {
+  .u-section-8 .u-image-1 {
     height: 417px;
   }
 
-  .u-section-9 .u-layout-wrap-1 {
-    width: 720px;
-    margin-right: calc(((100% - 720px) / 2));
-  }
-
-  .u-section-9 .u-layout-cell-1 {
-    min-height: 699px;
-  }
-
-  .u-section-9 .u-container-layout-1 {
-    padding: 30px 20px;
-  }
-
-  .u-section-9 .u-line-1 {
-    width: 262px;
-  }
-
-  .u-section-9 .u-text-3 {
-    margin-left: 56px;
-  }
-
-  .u-section-9 .u-text-4 {
-    margin-left: 56px;
-  }
-
-  .u-section-9 .u-text-5 {
-    margin-left: 56px;
-  }
-
-  .u-section-9 .u-text-6 {
-    margin-left: 56px;
-  }
-
-  .u-section-9 .u-layout-cell-2 {
-    min-height: 699px;
-  }
-
-  .u-section-9 .u-container-layout-4 {
-    padding: 30px 20px;
-  }
-
-  .u-section-9 .u-form-1 {
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+  .u-section-8 .u-image-2 {
+    margin-left: calc(((100% - 720px) / 2) + 68px);
   }
 }
 
 @media (max-width: 767px) {
-   .u-section-9 {
-    min-height: 1565px;
+   .u-section-8 {
+    min-height: 1086px;
   }
 
-  .u-section-9 .u-image-1 {
+  .u-section-8 .u-image-1 {
     height: 368px;
   }
 
-  .u-section-9 .u-layout-wrap-1 {
+  .u-section-8 .u-image-2 {
     width: 540px;
-    margin-right: auto;
-  }
-
-  .u-section-9 .u-layout-cell-1 {
-    min-height: 100px;
-  }
-
-  .u-section-9 .u-container-layout-1 {
-    padding-left: 30px;
-    padding-right: 30px;
-  }
-
-  .u-section-9 .u-layout-cell-2 {
-    min-height: 100px;
-  }
-
-  .u-section-9 .u-container-layout-4 {
-    padding-left: 30px;
-    padding-right: 30px;
+    height: 540px;
+    margin-left: calc(((100% - 540px) / 2));
   }
 }
 
 @media (max-width: 575px) {
-   .u-section-9 {
-    min-height: 1615px;
+   .u-section-8 {
+    min-height: 886px;
   }
 
-  .u-section-9 .u-image-1 {
+  .u-section-8 .u-image-1 {
     height: 327px;
   }
 
-  .u-section-9 .u-layout-wrap-1 {
+  .u-section-8 .u-image-2 {
     width: 340px;
+    height: 340px;
+    margin-left: calc(((100% - 340px) / 2));
   }
+}
 
-  .u-section-9 .u-container-layout-1 {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
+.u-section-8 .u-image-2,
+.u-section-8 .u-image-2:before,
+.u-section-8 .u-image-2 > .u-container-layout:before {
+  transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, image-zoom, background-size, background-position;
+}
 
-  .u-section-9 .u-container-layout-2 {
-    padding-right: 0;
-  }
+.u-section-8 .u-image-2.u-image-2.u-image-2:hover {
+  transform: scale(1.1) translateX(0px) translateY(0px) !important;
+}
 
-  .u-section-9 .u-text-3 {
-    margin-left: 58px;
-  }
-
-  .u-section-9 .u-text-4 {
-    margin-top: 10px;
-    margin-left: 58px;
-  }
-
-  .u-section-9 .u-container-layout-3 {
-    padding-right: 0;
-  }
-
-  .u-section-9 .u-text-5 {
-    margin-left: 58px;
-  }
-
-  .u-section-9 .u-text-6 {
-    margin-top: 10px;
-    margin-left: 58px;
-  }
-
-  .u-section-9 .u-container-layout-4 {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
+.u-section-8 .u-image-2.u-image-2.u-image-2.hover {
+  transform: scale(1.1) translateX(0px) translateY(0px) !important;
 }
