--- a/index.css
+++ b/index.css
@@ -64,11 +64,17 @@
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 778px;
+    min-height: 616px;
+  }
+
+  .u-section-1 .u-image-1 {
+    height: 533px;
   }
 
   .u-section-1 .u-text-1 {
     font-size: 2.25rem;
+    width: auto;
+    margin-top: -306px;
   }
 } .u-section-2 {
   background-image: none;
@@ -677,7 +683,7 @@
 }
 
 .u-section-4 .u-layout-wrap-1 {
-  margin-top: 61px;
+  margin-top: 60px;
   margin-bottom: 60px;
 }
 
@@ -718,7 +724,17 @@
   height: auto;
   min-height: 32px;
   width: 1123px;
-  margin: 0 -400px;
+  margin: 119px -400px 0;
+}
+
+.u-section-4 .u-btn-1 {
+  --radius: 50px;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 0.875rem;
+  letter-spacing: 1px;
+  background-image: none;
+  margin: 49px auto 0;
 }
 
 @media (max-width: 1199px) {
@@ -748,7 +764,7 @@
   }
 
   .u-section-4 .u-layout-cell-2 {
-    min-height: 184px;
+    min-height: 271px;
   }
 
   .u-section-4 .u-custom-html-1 {
@@ -813,6 +829,10 @@
 }
 
 @media (max-width: 575px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 879px;
+  }
+
   .u-section-4 .u-text-1 {
     margin-left: 0;
     margin-right: 0;
@@ -821,6 +841,20 @@
   .u-section-4 .u-text-2 {
     margin-left: 0;
     margin-right: 0;
+  }
+
+  .u-section-4 .u-layout-cell-2 {
+    min-height: 300px;
+  }
+
+  .u-section-4 .u-custom-html-1 {
+    margin-top: 116px;
+    margin-right: 83px;
+    margin-left: 53px;
+  }
+
+  .u-section-4 .u-btn-1 {
+    margin-top: 52px;
   }
 } .u-section-5 {
   background-image: none;
